libsspi_bridge does not build on Windows 32bit

XMLWordPrintable

        sspi.cpp(221): error C2220: warning treated as error - no 'object' file generated
        sspi.cpp(221): warning C4018: '<': signed/unsigned mismatch
        sspi.cpp(260): warning C4018: '<': signed/unsigned mismatch
        sspi.cpp(1587): warning C4018: '<': signed/unsigned mismatch

              Assignee:
              Thomas Stuefe
              Reporter:
              Thomas Stuefe
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: