8230910: libsspi_bridge does not build on Windows 32bit

Reviewed-by: alanb, weijun